--- a/portfolio.html
+++ b/portfolio.html
@@ -123,7 +123,7 @@
       <section class="section-btn link list">
         <div class="container">
           <ul class="item">
-            <li class="button-item-list list">
+            <li class="button-item list">
               <button class="buton-text link">Все</button>
             </li>
             <li class="button-item list">
